syntax = "proto3";
package banter;

option go_package = "github.com/autonomouskoi/banter";

enum BusTopic {
   BANTER_EVENT   = 0;
   BANTER_REQUEST = 1;
   BANTER_COMMAND = 2; 
}

message Banter {
    string  command  = 1;
    string  text     = 2;
    bool    disabled = 3;
    bool    random   = 4;
}

message EventSettings {
    bool    enabled = 1;
    string  text    = 2;
}

message GuestList {
    message Member {
        string  login = 1;
        string  id    = 2;
    }
    repeated  Member  members = 1;
}

message Config {
    reserved 7;
    
              uint32         interval_seconds = 1;
              uint32         cooldown_seconds = 2;
    repeated  Banter         banters          = 3;
              EventSettings  channel_raid     = 4;
              EventSettings  channel_follow   = 5;
              EventSettings  channel_cheer    = 6;
    map<string, GuestList>   guest_lists      = 8;
}

enum MessageTypeRequest {
    CONFIG_GET_REQ  = 0;
    CONFIG_GET_RESP = 1;
}

message ConfigGetRequest {}
message ConfigGetResponse {
    Config  config = 1;
}

enum MessageTypeCommand {
    CONFIG_SET_REQ  = 0;
    CONFIG_SET_RESP = 1;
}

message ConfigSetRequest {
    Config config = 1;
}
message ConfigSetResponse {
    Config config = 1;
}